--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
         box-shadow: 0 0 16px 3px rgba(0 0 0 / 15%);
         cursor : pointer;
     }
+    .toggleSwitch .toggleButton {
+        width: 40px;
+        height: 40px;
+        position :absolute;
+        top:50%;
+        left:4px;
+        transform:translateY(-50%);
+        border-radius: 50%;
+        background: #f03d3d;
+    }
     </style>
 </head>
 <body>
